# nome_projeto

./: README.md  mkdocs.yml  pyproject.toml
docs/: README.md
docs/api/: example_google.md  heranca_poo.md
src/nome_projeto/: example_google.py  heranca_poo.py
