[tool.poetry]
name = "nome-projeto"
version = "0.1.0"
description = ""
authors = ["Cícero <cicerohr@gmail.com>"]
readme = "README.md"
packages = [{include = "nome_projeto", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.12"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
